alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,7 +1069,7 @@ ul.myUL_left {
 .parent_simon{
 
   display: grid;
-  text-align: center;
+
   
   grid-template-columns: 1fr 1fr;
   
